# AI_Internship_Assignment

./: .env  .env.example  .gitignore  AI_intern_Assignment.md  LICENSE  README.md  agentic_rag_guide.md  agentic_rag_summary.md  arch.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_server.py
.github/workflows/: ci.yml
app/: main.py
app/api/: middleware.py
app/core/: __init__.py  dependencies.py  embedder.py  llm_client.py  vector_store.py
app/evaluation/: __init__.py  benchmark.py
app/generation/: __init__.py  prompt_builder.py  response_validator.py
app/ingestion/: __init__.py  chunker.py  loaders.py  pipeline.py
app/models/: __init__.py  documents.py  requests.py  responses.py  retrieval.py
app/orchestration/: __init__.py  fallback_handler.py  memory.py  query_analyzer.py  rag_agent.py
app/retrieval/: __init__.py  reranker.py  retriever.py
app/utils/: __init__.py  hashing.py  logging.py  text.py
backend/app/: main.py
configs/: __init__.py  prompts.py  settings.py
data/raw/: sample-plain-100kb.txt  sample_faq.txt  sample_guide.md  sample_products.csv  sample_sop.txt
docs/: architecture.md  system_design.md  testing.md  writeup.md
frontend/: package-lock.json  package.json
scripts/: evaluate.py  ingest.py  query.py
src/: __init__.py  config.py  models.py  pipeline.py
src/embeddings/: __init__.py  embedder.py
src/ingestion/: __init__.py  chunker.py  loaders.py
tests/: test_grounding.py  test_hybrid_retrieval.py  test_parent_retrieval.py  test_strict_retrieval_pipeline.py
ui/: streamlit_app.py
(+26 files in other folders)
