[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentic-rag"
version = "1.0.0"
description = "Production-quality Agentic RAG system with hallucination prevention"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["app", "configs"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
